--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -278,24 +278,16 @@
 }
 
 div.sp-modal-shade {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 10000;
-  /* Sit on top - blame WP-admin for the z-index battle . */
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 10000; /* Sit on top - blame WP-admin for the z-index battle . */
   left: 0;
   top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background: black;
-  /* Fallback color */
-  background: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   opacity: 0.4;
 }
 
@@ -304,12 +296,9 @@ div.shortpixel-modal {
   /*margin: 8% auto;  15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 30%;
-  /* Could be more or less, depending on screen size */
-  min-width: 300px;
-  /* Could be more or less, depending on screen size */
-  z-index: 999999;
-  /* Z-index wars :/ */
+  width: 30%; /* Could be more or less, depending on screen size */
+  min-width: 300px; /* Could be more or less, depending on screen size */
+  z-index: 999999; /* Z-index wars :/ */
   position: fixed;
   top: 10%;
   left: 50%;
@@ -577,7 +566,9 @@ body.debug-model-active {
   height: 20px;
   width: 20px;
   margin-top: -1px;
-  filter: brightness(0) saturate(100%);
+}
+.shortpixel-ai-interface .shortpixel-ai-caption {
+  margin: 0 4px;
 }
 .shortpixel-ai-interface span {
   vertical-align: middle;
