--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -272,6 +272,10 @@
   padding-left: 8px;
   padding-bottom: 8px;
 }
+.media-sidebar .shortpixel-popup-info {
+  padding-top: 20px;
+  margin-bottom: 0px;
+}
 
 .edit-attachment-frame .shortpixel-popup-info {
   border: 0;
@@ -579,6 +583,21 @@ body.debug-model-active {
 }
 .shortpixel-ai-interface.attachment-details-two-column-alt-text, .shortpixel-ai-interface.attachment-details-alt-text {
   float: right;
+  width: 65%;
+}
+.shortpixel-ai-interface.attachment-details-two-column-alt-text img.ai, .shortpixel-ai-interface.attachment-details-alt-text img.ai {
+  margin-top: 5px;
+  float: left;
+}
+.shortpixel-ai-interface.attachment-details-two-column-alt-text img.shortpixel, .shortpixel-ai-interface.attachment-details-alt-text img.shortpixel {
+  margin-right: 10px;
+}
+.media-sidebar .shortpixel-ai-interface {
+  width: 100%;
+  text-align: right;
+}
+.media-sidebar .shortpixel-ai-interface img.shortpixel.shortpixel-ai-caption {
+  margin-right: 0px;
 }
 
 /*# sourceMappingURL=shortpixel-admin.css.map */
