--- a/res/scss/elements/_setting.scss
+++ b/res/scss/elements/_setting.scss
@@ -126,20 +126,18 @@ setting {
     }
   }
 
-  &.switch {
-
-    /*name,
-    info,
-    warning,
-    error {
-      //	 margin-left: 70px;
-    } */
-  }
 
   &.disabled {
     filter: blur(1px);
     opacity: 0.4;
     transition: all 0.5s ease-out;
+  }
+
+  &.textarea 
+  {
+     content {
+       display: block;
+     }
   }
 
 }
