--- a/res/scss/view/_list-item.scss
+++ b/res/scss/view/_list-item.scss
@@ -74,7 +74,7 @@
   }
   .sp-column-actions
   {
-		 margin: 10px;
+		 margin: 4px;
      position: relative;
   }
   .thumbs-todo
@@ -105,6 +105,12 @@
   } //error
   .shortpixel-image-notice {
      border: 1px solid #000;
+  }
+  .statusText 
+  {
+     i { 
+       margin-left: 4px;
+     }
   }
 } // sp-column-info
 
