Update the wording and styling for AI

--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -371,7 +371,7 @@
   display: block;
 }
 .sp-column-info .sp-column-actions {
-  margin: 4px;
+  margin: 0 4px;
   position: relative;
 }
 .sp-column-info .thumbs-todo {
