Update more wording, links and styles for AI

--- a/res/scss/view/_settings-ai.scss
+++ b/res/scss/view/_settings-ai.scss
@@ -82,9 +82,12 @@
         }
     }
 
-    .ai_filename_setting
+    .ai_filename_setting switch, .ai_filename_setting content.ai_gen_filename
     {
-         filter: blur(1px);
+        filter: blur(1px);
+    }
+    .ai_gen_filename {
+	opacity: 1!important;
     }
 
 } // tab-ai 
