--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -1620,8 +1620,11 @@ div.spio-modal-title {
   width: 35px;
   height: 20px;
 }
-.wrap.is-shortpixel-settings-page #tab-ai .ai_filename_setting {
+.wrap.is-shortpixel-settings-page #tab-ai .ai_filename_setting switch, .wrap.is-shortpixel-settings-page #tab-ai .ai_filename_setting content.ai_gen_filename {
   filter: blur(1px);
+}
+.wrap.is-shortpixel-settings-page #tab-ai .ai_gen_filename {
+  opacity: 1 !important;
 }
 .wrap.is-shortpixel-settings-page #tab-exclusions .exclude-thumbnail-setting content {
   column-count: 3;
