--- a/res/scss/shortpixel-media-modal.scss
+++ b/res/scss/shortpixel-media-modal.scss
@@ -6,12 +6,12 @@
 {
     position: fixed;
     left: 0;
-    right: 0;
+    right: 25px;
     bottom: 0;
     top: 0; 
     background: rgba(0,0,0, .50) ;
     display: flex; 
-    z-index: 50; 
+    z-index: 250;  // z-index inflation
 }
 
 .shortpixel-media-modal
@@ -20,17 +20,18 @@
     align-items: center; 
     justify-content: center;
     position: absolute; 
-    top: 0;
-    bottom: 0;
+    top: 25px;
+  //  bottom: 0;
     left: 0;
     right: 0; 
     
 
     .modal-wrapper 
     {
-        z-index: 60; 
+        z-index: 300; 
         width: 80%; 
         height: 80vh; 
+        max-height: 700px;
        // max-width: 700px; 
         background: #fff;
         .title {
